# automated_backup_system

./: ReadMe.md  backup.py  clean_local_backup.py  config.yaml  get_config.py  log_error.py  main.py  pyproject.toml  remove_dir_r.py  test.sh
